update project section

--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
                             streaming experience with a modern, mobile-friendly design.</p>
                         <br>
                         <br>
-                        <a href="https://github.com/DineshPawar7/huluapp" class="project-button">View Project</a>
+                        <a href="https://dineshpawar7.github.io/huluapp/" class="project-button">View Project</a>
+                        <a href="https://github.com/DineshPawar7/huluapp" class="project-source">View Source</a>
                     </div>
                 </div>
                 <div class="project-item">
@@ -161,20 +162,22 @@
                         <p>Developed a responsive CET Cell clone using HTML, CSS, and JavaScript, featuring dynamic
                             content, seamless navigation, and a user-friendly interface optimized for all devices.</p>
 
-                        <a href="https://github.com/DineshPawar7/cetcell-MHTCET-Clone7" class="project-button">View
+                        <a href="https://dineshpawar7.github.io/cetcell-MHTCET-Clone7/" class="project-button">View
                             Project</a>
+                        <a href="https://github.com/DineshPawar7/cetcell-MHTCET-Clone7" class="project-source">View Source</a>
                     </div>
                 </div>
                 <div class="project-item">
-                    <img src="images/coming-soon.jpeg" alt="Project 2">
+                    <img src="images/blog.png" alt="Project 2">
                     <div class="project-content">
-                        <h3> AI Based Project</h3>
+                        <h3> Personal Blog with CMS</h3>
                         <p class="date">July 2024 - Present</p>
-                        <p>Designing an innovative AI-based website, leveraging cutting-edge technologies to deliver
-                            intelligent user interactions and personalized experiences. Focused on responsive design,
-                            seamless integration, and advanced machine learning algorithms.</p>
+                        <p>Developed a responsive personal blog with a custom content management system (CMS) using
+                            Nunjucks, JavaScript, HTML, and CSS. Integrated Netlify CMS for efficient content management
+                            and deployment. </p>
 
-                        <a href="#" class="project-button">View Project</a>
+                        <a href="https://dineshblog07.netlify.app/" class="project-button">View Project</a>
+                        <a href="https://github.com/DineshPawar7/dineshblog07" class="project-source">View Source</a>
                     </div>
                 </div>
             </div>
