--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         </div>
     </section>
 
-    <section id="education-section">
+    <section id="education">
         <h2>Education </h2>
         <div class="education-container">
             <div class="education-item">
