add new project

--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
 
                         <a href="https://dineshpawar7.github.io/cetcell-MHTCET-Clone7/" class="project-button">View
                             Project</a>
-                        <a href="https://github.com/DineshPawar7/cetcell-MHTCET-Clone7" class="project-source">View Source</a>
+                        <a href="https://github.com/DineshPawar7/cetcell-MHTCET-Clone7" class="project-source">View
+                            Source</a>
                     </div>
                 </div>
                 <div class="project-item">
@@ -179,6 +180,20 @@
                         <a href="https://dineshblog07.netlify.app/" class="project-button">View Project</a>
                         <a href="https://github.com/DineshPawar7/dineshblog07" class="project-source">View Source</a>
                     </div>
+
+                </div>
+                <div class="project-item">
+                    <img src="images/bgmi.png" alt="Project 2">
+                    <div class="project-content">
+                        <h3>BGMI Web-Clone</h3>
+                        <p class="date">22 Aug 2024 - 30 Aug 2024</p>
+                        <p>I built a BGMI clone using HTML, CSS, and JavaScript, replicating the game's interface with responsive design and interactive elements, showcasing my front-end development skills and attention to detail.</p>
+
+                        <a href="https://bgmi-website-clone.netlify.app/" class="project-button">View Project</a>
+                        <a href="https://github.com/DineshPawar7/BGMI-Website-Clone" class="project-source">View
+                            Source</a>
+                    </div>
+
                 </div>
             </div>
         </div>
