--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-image">
-                    <img src="images/owner.jpg" alt="Your Photo">
+                    <img src="images/owner.png" alt="Your Photo">
                 </div>
                 <div class="about-text">
                     <h2>Hi, I'm <span class="myname">Dinesh Pawar</span></h2>
@@ -142,16 +142,15 @@
             <h2 class="section-title">Projects</h2>
             <div class="projects-grid">
                 <div class="project-item">
-                    <img src="images/hulu.png" alt="Project 1">
+                    <img src="images/Home-Architecture.png" alt="Project 1">
                     <div class="project-content">
-                        <h3>Hulu.com (Clone)</h3>
-                        <p class="date">March 2024 - Jun 2024</p>
-                        <p>Crafted a sleek, responsive Hulu clone with HTML, CSS, and JavaScript, delivering a dynamic
-                            streaming experience with a modern, mobile-friendly design.</p>
+                        <h3>Architectural Design Marketplace</h3>
+                        <p class="date">22 Sep 2024 - 30 Sep 2024</p>
+                        <p>I'm building a project for a client, an Architectural Design Marketplace. Users can buy designs on this website. I want to add Netlify CMS to upload images of designs to the website and make it responsive.</p>
                         <br>
                         <br>
-                        <a href="https://dineshpawar7.github.io/huluapp/" class="project-button">View Project</a>
-                        <a href="https://github.com/DineshPawar7/huluapp" class="project-source">View Source</a>
+                        <a href="https://rushi-the-cad-designer.netlify.app/" class="project-button">View Project</a>
+                        <a href="https://github.com/DineshPawar7/Architectural-Design-Marketplace" class="project-source">View Source</a>
                     </div>
                 </div>
                 <div class="project-item">
